PR toolchain/51557: gdb can't read core files

Register an iterate_over_regset_sections methods for armnbsd